# HOB

./: .gitignore  CMakeLists.txt  HOB.exvim  LICENSE  README.md  hob.exvim  tests.sh
include/: HOB.hpp  hob.hpp  hobio.hpp  message.hpp  optional.hpp  thread.hpp
include/hob/: dynamhob.hpp  hob.hpp  vhob.hpp
include/hob/codec/: flat.hpp  flib.hpp  json.hpp  vlib.hpp
include/hob/io/: buffer.hpp  common.hpp  decoder.hpp  encoder.hpp  handle.hpp  stream.hpp
include/hob/std/: any.hpp  thread.hpp  type_traits.hpp
include/hob/types/: hobject.hpp  variant.hpp
include/hob/utils/: cpp_magic.h
src/: test.cpp
tests/: HOBs.h  hobs.h  messages.h
tests/basic/: test.cpp
tests/json/: inport.cpp
tests/sockets/: client.cpp  fdstreambuf.cpp  fdstreambuf.h  messages.h  server.cpp
